added lock icon

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
         <main class="main">
 
             <div class="d-flex flex-row justify-content-between rqo-page-header">
-                <div class="col rqo-page-header-tabs pl-0 hidden-xs-down">
+                <div class="rqo-page-header-tabs pl-0 hidden-xs-down">
 
                     <ul class="nav nav-tabs" role="tablist">
                         <li class="nav-item">
@@ -534,43 +534,51 @@
             <!--summary-->
             <div class="page-summary ">
                 <div class="row">
-                    <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="col col-11">
                         <div class="row">
-                            <div class="col-6 col-md-3"><span class="text-muted">File No :</span></div>
-                            <div class="col-6 col-md-9 pl-0">123456789</div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="row">
-                            <div class="col-6 col-md-3"><span class="text-muted">Buyer :</span></div>
-                            <div class="col-6 col-md-9 pl-0">Biff Tanner</div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-4 hidden-md-down">
-                        <div class="row">
-                            <div class="col-6 col-md-3"><span class="text-muted">Region :</span></div>
-                            <div class="col-6 col-md-9 pl-0">01 - Admin</div>
-                        </div>
-                    </div>
+                            <div class="col-sm-12 col-md-6 col-lg-4">
+                                <div class="row">
+                                    <div class="col-6 col-md-3"><span class="text-muted">File No :</span></div>
+                                    <div class="col-6 col-md-9 pl-0">123456789</div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-6 col-lg-4">
+                                <div class="row">
+                                    <div class="col-6 col-md-3"><span class="text-muted">Buyer :</span></div>
+                                    <div class="col-6 col-md-9 pl-0">Biff Tanner</div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-6 col-lg-4 hidden-md-down">
+                                <div class="row">
+                                    <div class="col-6 col-md-3"><span class="text-muted">Region :</span></div>
+                                    <div class="col-6 col-md-9 pl-0">01 - Admin</div>
+                                </div>
+                            </div>
 
-                    <div class="col-sm-12 col-md-6 col-lg-4 hidden-sm-down">
-                        <div class="row">
-                            <div class="col-6 col-md-3"><span class="text-muted">Property :</span></div>
-                            <div class="col-6 col-md-9 pl-0">100 East Main St Frisco, TX 75033</div>
+                            <div class="col-sm-12 col-md-6 col-lg-4 hidden-sm-down">
+                                <div class="row">
+                                    <div class="col-6 col-md-3"><span class="text-muted">Property :</span></div>
+                                    <div class="col-6 col-md-9 pl-0">100 East Main St Frisco, TX 75033</div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-6 col-lg-4 hidden-sm-down">
+                                <div class="row">
+                                    <div class="col-6 col-md-3"><span class="text-muted">Seller :</span></div>
+                                    <div class="col-6 col-md-9 pl-0">Calvin Klein</div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-6 col-lg-4 hidden-md-down">
+                                <div class="row">
+                                    <div class="col-6 col-md-3"><span class="text-muted">Branch :</span></div>
+                                    <div class="col-6 col-md-9 pl-0">02 - Accounting</div>
+                                </div>
+                            </div>
                         </div>
+                        
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-4 hidden-sm-down">
-                        <div class="row">
-                            <div class="col-6 col-md-3"><span class="text-muted">Seller :</span></div>
-                            <div class="col-6 col-md-9 pl-0">Calvin Klein</div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-4 hidden-md-down">
-                        <div class="row">
-                            <div class="col-6 col-md-3"><span class="text-muted">Branch :</span></div>
-                            <div class="col-6 col-md-9 pl-0">02 - Accounting</div>
-                        </div>
-                    </div>
+                    <div class="col col-1">
+                            <i class="fa fa-lock fa-2x"></i>
+                        </div>    
                 </div>
             </div>
 
