--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
             <!--summary-->
             <div class="page-summary ">
                 <div class="row">
-                    <div class="col col-11">
+                    <div class="col col-10">
                         <div class="row">
                             <div class="col-sm-12 col-md-6 col-lg-4">
                                 <div class="row">
@@ -576,16 +576,17 @@
                         </div>
                         
                     </div>
-                    <div class="col col-1">
-                            <i class="fa fa-lock fa-3x"></i>
-                        </div>    
+                    <div class="col col-2">                        
+                        <i onClick="javascript: alert('Are you sure you want to unlock this file?')" class="pull-right text-secondary fa fa-lock fa-3x"></i>
+                    </div>    
                 </div>
             </div>
 
             <div class="container-fluid">                
 
                 <div class="row">
-                    <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+                    <!--File Details-->
+                    <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">                        
                         <div class="card">
                             <div class="card-header"> File Details</div>
                             <div class="card-block">
@@ -776,6 +777,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--Critical Dates-->
                     <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                         <div class="card">
                             <div class="card-header"> Critical Dates</div>
@@ -815,10 +817,7 @@
                     <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                         <div class="card">
                             <div class="card-header">
-                                <span> Notes</span>
-                                <!--<div class="btn-group pull-right" role="group" aria-label="Basic example">
-                                    <button type="button" class="btn btn-sm btn-secondary panel-btn"><i class="fa fa-plus"></i><span> Add</span></button>                        
-                                </div>-->
+                                <span> Notes</span>                                
                             </div>
                             <div class="card-block">
                             </div>
